created layout page,index and basic styles

--- a/StackOverFlowProject/Views/Shared/_LayoutPage1.cshtml
+++ b/StackOverFlowProject/Views/Shared/_LayoutPage1.cshtml
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-sm text-light navbar-light">
             <a class="navbar-brand" href="#">StackOverflow</a>
 
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#CollapsibleNavBar">
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#CollapsibleNavBar"> </button>
 
                 <span class="navbar-toggler-icon"></span>
                 <div class="collapse navbar-collapse" id="CollapsibleNavBar">
