--- a/StackOverFlowProject/Content/Style.css
+++ b/StackOverFlowProject/Content/Style.css
@@ -1,2 +1,29 @@
-﻿body {
+﻿.navbar
+{
+    background-color :darkslateblue;
+}
+
+#active
+{
+    color : yellow !important;
+}
+
+.navbar a:link, .navbar a:visited
+{
+    color : white !important;
+}
+
+.navbar a:hover {
+    color: aquamarine !important;
+    
+    text-decoration: underline;
+}
+
+.dropdown-menu a:hover
+{
+color: black !important;
+}
+
+.hidden{
+    display:none;
 }
