Added intial content to Index page

--- a/StackOverFlowProject/Views/Home/Index.cshtml
+++ b/StackOverFlowProject/Views/Home/Index.cshtml
@@ -1,1 +1,14 @@
-﻿<h1>Heloo </h1>
+﻿@{
+    ViewBag.Title = "Home";
+}
+<div class="row">
+    <div class="col-sm-12">
+        <div class="jumbotron">
+            <h2>Stack Overflow Project</h2>
+            <h4>This is sample stack overflow project, I have it developed in Asp.net MVC and sql database </h4>
+            <p class="lead"> I hope you will like to browse throgh and provide feedback</p>
+        </div>
+
+    </div>
+</div>    
+
