--- a/StackOverFlowProject/Views/Shared/_LayoutPage1.cshtml
+++ b/StackOverFlowProject/Views/Shared/_LayoutPage1.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta charset="utf-8">
-    <title>@ViewBag.Title - StackOverFlow</title>
+    <title>@ViewBag.Title - StackOverflow</title>
     @Styles.Render("~/Style/bootstrap")
     @Styles.Render("~/Style/Site")
     @Styles.Render("~/Scripts/bootstrap")
