--- a/StackOverFlowProject/Views/Home/Index.cshtml
+++ b/StackOverFlowProject/Views/Home/Index.cshtml
@@ -13,18 +13,7 @@
             <table class="table">
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td><span class="badge badge-secondary">@item.VotesCount </span> Votes</td>
-                        <td><span class="badge badge-secondary">@item.AnswerCount </span> Answer</td>
-                        <td><span class="badge badge-secondary"> @item.ViewsCount </span> Count</td>
-                        <td class="text-dark">
-                            <a class="text-primary" href="/questions/View/@item.QuestionID"> @item.QuestionName </a>
-                            <br />
-                            <span class="badge badge-info"> @item.Category.CategoryName </span>
-                        </td>
-                        <td>@item.User.Name</td>
-                        <td>@item.QuestionDateAndTime</td>
-                    </tr>
+                    Html.RenderPartial("Question", item ); 
                 }
             </table>
         </div>
