added login and logout functionality

--- a/StackOverFlowProject/Views/Account/Register.cshtml
+++ b/StackOverFlowProject/Views/Account/Register.cshtml
@@ -77,7 +77,7 @@
 
 <script>
 
-    $("a[href='/account/register']").attr("id", "active");
+    $("a[href='/account/Register']").attr("id", "active");
 
     $(document).on("submit", ".needs-validation", validate);
     $(".needs-validation input").blur(validate);
