--- a/StackOverFlowProject/Views/Shared/_LayoutPage1.cshtml
+++ b/StackOverFlowProject/Views/Shared/_LayoutPage1.cshtml
@@ -45,7 +45,7 @@
                                  <img src="~/Imgaes/user.png" width="20px" /> @Session["CurrentUserName"]
                              </a>
                                 <div class="dropdown-menu bg-info">
-                                    <a class="dropdown-item" href="/account/logout"> Logout</a>
+                                    <a class="dropdown-item" href="/account/Logout"> Logout</a>
                                     <a class="dropdown-item" href="/account/changeProfile"> Change Profile</a>
                                     <a class="dropdown-item" href="/account/changePassword"> Change Password</a>
 
